NFDIV-3784: Fix issue with attachments with general letter